installer/resources/themes/snark/midnight/snark.css
/* ... */
@media screen and (min-width: 1200px) {
a, th, thead th, tfoot th, td, select, select option, .snarkAddInfo, .snarkFileName, code, textarea, input[name="nofilter_dataDir"] {
    font-size: 9pt !important;
}

.snarkNav {
    font-size: 10.5pt !important;
}

#pagenavcontrols {
    transform: translateX(52px) !important;
}

.iframed #pagenavcontrols {
    transform: translateX(46px) !important;
}

th.snarkTorrentAction input[type="image"], td.snarkTorrentAction input[type="image"] {
    padding: 5px 6px !important;
}

th.snarkTorrentAction input[type="image"] {
    margin-top: 1px;
    height: 12px;
    width: 24px;
}

td.snarkTorrentAction input[type="image"] {
    height: 12px;
    width: 12px;
}

.configsectionpanel .snarkConfigTitle, .snarkNav:link {
    font-size: 11pt !important;
}

.toggleview, .configsection .snarkConfigTitle {
    min-width: 340px !important;
}

.percentDownloaded {
    pointer-events: none; /* hide tooltip */
}

.snarkTorrentStatus {
    padding-right: 10px !important;
}
}

@media screen and (min-width: 1500px) {
a, th, thead th, tfoot th, td, select, select option, .snarkAddInfo, .snarkFileName, textarea, input[name="nofilter_dataDir"], input {
    font-size: 10pt !important;
}

code, tt {
    font-size: 10pt !important;
}

.snarkTorrents tt {
    font-size: 9pt !important;
}

.snarkMessages {
    margin-bottom: -10px;
}

.iframed .snarkMessages {
    margin-top: -6px;
}

.snarkMessages + form {
    margin-top: 9px;
}

.logshim {
    margin-top: -9px !important;
}

.snarkMessages li, .snarkMessages li a {
    font-size: 9.5pt !important;
}

.snarkMessages li::before {
    margin: 0 1px 0 1px;
    width: 15px;
    background-size: 10px 10px;
}

.snarkNav:link {
    padding-top: 4px !important;
    padding-bottom: 4px !important;
}

.snarkNav:link:first-child {
    padding-left: 28px !important;
}

/*.snarkTorrentAction input[type="image"] {
    padding: 4px 5px !important;
}*/

#pagenavcontrols {
    transform: translateX(70px) !important;
}

.iframed #pagenavcontrols {
    transform: translateX(66px) !important;
}

.configsectionpanel .snarkConfigTitle {
    font-size: 12.5pt !important;
}

.toggleview {
    padding-bottom: 5px !important;
}

.snarkConfigTitle, .toggleview {
    min-width: 340px !important;
}

.snarkConfigTitle a {
    margin-bottom: 0 !important;
}

.snarkMessages {
    height: 54px;
}

/*.snarkTorrents td:nth-child(3), .SnarkTorrents td:nth-child(4) {
    text-align: center !important;
    width: 24px !important;
}*/

.snarkTorrentDownloaded {
    white-space: nowrap;
    padding: 0 10px !important;
}

.snarkTorrents td {
    padding-top: 4px;
    padding-bottom: 4px;
}

.page {
    padding: 10px;
    background: #003;
    background: linear-gradient(to right, #004, #002, #004);
    background: linear-gradient(to right, #002, #004, #002);
    box-shadow: inset 0 0 0 1px #000;
}

.newtorrentsection, .addtorrentsection, .configsection, .configsectionpanel, .snarkMessages, .snarkTorrents, .snarkDirInfo, .snarkTorrentInfo {
    border: 1px solid #26235c;
}

.snarkDirInfo {
    margin-bottom: 0;
}

.snarkTorrents {
    margin-top: 0 !important;
}

.mainsection {
    background: none;
}

#pagenav img {
    height: 16px;
}
}

/* end responsive layout */

/* torrent sort indicator */
/*
.snarkTorrents th a[href*="sort="]:hover::after {
    margin-left: 2px;
    position: absolute;
    display: inline-block;
    font-size: 10pt;
    color: #b3b;
    content: "\23F6";
}

.snarkTorrents th a[href*="sort=-"]:hover::after {
    margin-left: 2px;
    position: absolute;
    display: inline-block;
    font-size: 10pt;
    color: #b3b;
    content: "\23F7";
}
*/
/* end torrent sort indicator */

.info_tracker {
    margin: 1px -1px 1px 0;
    padding: 1px 6px 1px 18px;
    display: inline-block;
    white-space: nowrap;
    max-width: 155px;
    vertical-align: middle;
    color: #7972d1;
    border-radius: 1px;
    border: 1px solid #114;
    background: #001 url(images/button_tracker.png) left 3px center no-repeat;
    background-size: 14px auto;
}

.info_tracker a {
    max-width: 140px;
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
}

.info_tracker a[href*="b32.i2p"] {
    margin-right: -5px !important;
    max-width: 90px;
}

.info_tracker:hover, .info_tracker:hover a {
    color: #652787;
}

.info_tracker:hover {
    border: 1px solid #652787;
    background: url(images/button_tracker_hover.png) left 3px center no-repeat, linear-gradient(to bottom, #000 50%, #002 50%) !important;
    background-size: 14px auto, 100% 100% !important;
}

.info_tracker:active, .info_tracker:active a {
    color: #fff !important;
}

.info_tracker:active {
    color: #fff !important;
    box-shadow: 0 0 0 1px #652787, inset 3px 3px 3px #1f002f;
    background: #652787 url(images/button_tracker_active.png) left 3px center no-repeat !important;
    background-size: 14px auto !important;
}

/* miminal tabs */

.toggleview, .configsection .snarkConfigTitle {
    padding: 5px 0 3px !important;
    min-width: 300px;
    height: 24px !important;
    text-align: center !important;
}

.configsection .snarkConfigTitle {
    padding-bottom: 2px !important;
}

.toggleview, .configsection .snarkConfigTitle a {
    font-size: 0 !important;
}

.configsection .snarkConfigTitle a img {
    width: 16px !important;
    height: 16px !important;
    visibility: visible !important;
}

.toggleview img, .configsection .snarkConfigTitle a img, #dhtDebugPanel .toggleview img {
    margin: -2px auto -21px !important;
    padding: 3px !important;
    max-width: 16px;
    max-height: 16px;
    display: block;
    overflow: hidden;
    text-align: center !important;
    border: 2px solid #000;
    border-radius: 50%;
    box-shadow: 0 0 1px 1px rgba(32,0,48,.5);
    background: #000;
    background: linear-gradient(to bottom, #002, #000 50%, #1f1e32 50%, #191729);
}
/* ... */

